# Imitation-Learning-With-Haptics-Feedback

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  env.py  main.py  pyproject.toml
data/: __init__.py  recorder.py  snapshot.py
docs/: CodebaseStatusSummary.md  Hardware.md
docs/plan/: ImplementationPlan_HardwareInfrastructure.md
hardware/: __init__.py  _base.py  cameras.py  force_torque.py  gripper.py  haptic.py  ur_arm.py
legacy/: compute_stats.py  controller.py  gui.py  h5_modify.py  h5_zipper_RLDS_preprocessor.py  h5_zipper_test.py  imitate_episodes_robot.py  main.py  observation_data.txt  robot_manipulation.py  run.py  run_haply.py  run_random_box_placement.py  run_stuffy_cube_mix.py  run_vr.py  test.py  testURMove.py  test_cams.py  test_joint_space.py  view_h5.py
legacy/haply_data_collect_july23/: README.md  ball_haply.py  haply_barebones.py  haply_data_collect.py  haply_view_collected_data.py  outputs.txt  state__update_ref.json  test_async.py  test_haply.py  test_haply_serial.py  test_keyboard.py
legacy/haply_data_collect_july23/camera_utils/wrappers/: multi_camera_wrapper_rtde copy.py
legacy/haply_data_collect_july23/controllers/: haply_ref.py  haplybooleanGripper.py
legacy/haply_data_collect_july23/python_samples/: 02_read_position.py  03_read_position_fixed_rate.py  04_send_force.py  09_position_control.py  10_follow_trajectory.py  11_read_handle_info.py
legacy/haply_data_collect_july23/robot_env_corrected/: RTDE_RW_test_collect copy.py  RTDE_RW_test_collect.py  extras.py  transformations.py
legacy/haply_data_collect_july23/teleop_controls/haply_reader/: __init__.py  reader.py
legacy/haply_data_collect_july23/teleop_controls/misc/: transformations.py
legacy/haply_data_collect_july23/ur10e_tele/: RTDE_RW_test_collect.py  collect_URrobot_trajectory_test.py
legacy/haply_data_collect_july23/ur10e_tele/trajectory_utils/: RTDE_UR_misc_Trial_Collection.py  trajectory_reader_rtde.ipynb
legacy/robot_env/: RTDE_RW_test_collect.py  frame.txt  multi_camera_wrapper_rtde copy.py  multi_camera_wrapper_rtde.py
legacy/robot_env/mae_sdk_sensureal/: test.py
legacy/robot_env/mae_sdk_sensureal/mae_fts_sdk/: COPYRIGHT  README.md  enable_auto_complete  pyproject.toml  requirements.txt
legacy/robot_env/mae_sdk_sensureal/mae_fts_sdk/sample/: set_bias_and_tool_and_save.sh
legacy/robot_env/mae_sdk_sensureal/mae_fts_sdk/src/mae_fts_sdk/: __init__.py  fts_commands.py  fts_constants.py  fts_responses.py  fts_serial.py  fts_udp.py  parser_utils.py
legacy/robot_env/mae_sdk_sensureal/mae_fts_sdk/src/sample/: mae_fts_sdk_sample.py
legacy/robot_env/mae_sdk_sensureal/mae_sdk/: COPYRIGHT  README.md  pyproject.toml  requirements.txt
legacy/robot_env/mae_sdk_sensureal/mae_sdk/src/mae_sdk/: log_utils.py  parser_utils.py  str_utils.py
legacy/robot_env/mae_sdk_sensureal/mae_sdk/src/mae_sdk/communication/: __init__.py  communication_interface.py
legacy/view_scripts/: view_camera_feeds.py  view_dataset.py  view_dataset_statistics.py  view_h5_file.py  view_variance_plots.py
tests/: __init__.py  test_env_step.py  test_fts_transform.py  test_haptic_decoding.py  test_ur_commands.py
