[project]
name = "robot-manipulation"
version = "0.1.0"
description = "Teleoperation and imitation learning data collection for UR robot arm"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pyrealsense2>=2.55",
    "ur-rtde>=1.5",
    "websockets>=12.0",
    "orjson>=3.9",
    "h5py>=3.10",
    "scipy>=1.12",
    "tqdm>=4.66",
    "pynput>=1.7",
    # Vendored MAE force-torque sensor SDKs (local path, not on PyPI)
    "mae-fts-sdk",
    "mae-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.uv.sources]
mae-fts-sdk = { path = "legacy/robot_env/mae_sdk_sensureal/mae_fts_sdk" }
mae-sdk     = { path = "legacy/robot_env/mae_sdk_sensureal/mae_sdk" }

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
markers = [
    "sim: integration tests that require URSim running (docker)",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = "legacy/"
