[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = ["numpy>=1.26.4,<2.0.0"]

name = "mae_sdk"
version = "2025.0.0.alpha"
authors = [
    { name = "Eduardo Reis", email = "eduardo.reis@maerobotics.com" },
    { name = "Priyam Panchal", email = "priyam.panchal@maerobotics.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mae_sdk"]
